# obs-scene-tree

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.claude/: project-context.md  repo-workflow.md  settings.json
.github/scripts/: Package-Windows.ps1
build-aux/windows/: installer.iss
data/locale/: en-US.ini  es-ES.ini
src/: icons.cpp  icons.hpp  plugin-main.cpp  scene-tree-dock.cpp  scene-tree-dock.hpp  scene-tree.cpp  scene-tree.hpp
